force-app/main/default/objects/Medicament__c/fields/Matin__c.field-meta.xml
<CustomField>
    <fullName>Matin__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Matin</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>