force-app/main/default/objects/Medicament__c/fields/Midi__c.field-meta.xml
<CustomField>
    <fullName>Midi__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Midi</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>