force-app/main/default/objects/Medicament__c/fields/Soir__c.field-meta.xml
<CustomField>
    <fullName>Soir__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Soir</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>